--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "search",
@@ -19,12 +22,6 @@
   ],
   "author": "ElliotForWater",
   "license": "ISC",
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ]
-  },
   "dependencies": {
     "@types/node": "14.10.3",
     "@types/react": "16.9.49",
@@ -35,9 +32,17 @@
   },
   "devDependencies": {
     "@babel/core": "~7.11.6",
+    "@babel/plugin-transform-runtime": "~7.11.5",
+    "@babel/preset-flow": "~7.10.4",
     "@storybook/react": "~6.0.21",
-    "awesome-typescript-loader": "^5.2.1",
+    "@types/enzyme": "~3.10.6",
+    "@types/jest": "~26.0.14",
+    "awesome-typescript-loader": "~5.2.1",
+    "babel-jest": "~26.3.0",
     "babel-loader": "~8.1.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
+    "enzyme": "~3.11.0",
+    "enzyme-adapter-react-16": "~1.15.4",
     "eslint": "~7.9.0",
     "eslint-config-prettier": "~6.11.0",
     "eslint-plugin-jsx-a11y": "~6.3.1",
@@ -45,9 +50,11 @@
     "eslint-plugin-react": "~7.20.6",
     "eslint-plugin-react-hooks": "~4.1.2",
     "husky": "~4.3.0",
+    "jest": "~26.4.2",
     "lint-staged": "~10.3.0",
     "prettier": "~2.1.1",
-    "react-docgen-typescript-loader": "^3.7.2"
+    "react-docgen-typescript-loader": "~3.7.2",
+    "ts-jest": "~26.3.0"
   },
   "husky": {
     "hooks": {
