--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-jest": "~26.3.0",
     "babel-loader": "~8.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
+    "classnames": "^2.2.6",
     "enzyme": "~3.11.0",
     "enzyme-adapter-react-16": "~1.15.4",
     "eslint": "~7.9.0",
@@ -50,11 +51,13 @@
     "eslint-plugin-prettier": "~3.1.4",
     "eslint-plugin-react": "~7.20.6",
     "eslint-plugin-react-hooks": "~4.1.2",
+    "fetch-jsonp": "^1.1.3",
     "husky": "~4.3.0",
     "jest": "~26.4.2",
     "lint-staged": "~10.3.0",
     "prettier": "~2.1.1",
     "react-docgen-typescript-loader": "~3.7.2",
+    "react-svg-loader": "^3.0.3",
     "ts-jest": "~26.3.0"
   },
   "husky": {
