--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@types/node": "14.10.3",
     "@types/react": "16.9.49",
+    "es6-promise": "^4.2.8",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
