--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
   "author": "ElliotForWater",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "14.10.3",
-    "@types/react": "16.9.49",
     "es6-promise": "^4.2.8",
     "next": "9.5.3",
     "react": "16.13.1",
@@ -39,6 +37,9 @@
     "@storybook/react": "~6.0.21",
     "@types/enzyme": "~3.10.6",
     "@types/jest": "~26.0.14",
+    "@types/node": "14.10.3",
+    "@types/react": "16.9.49",
+    "@types/react-dom": "^16.9.8",
     "awesome-typescript-loader": "~5.2.1",
     "babel-jest": "~26.3.0",
     "babel-loader": "~8.1.0",
