--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "author": "ElliotForWater",
   "license": "ISC",
   "dependencies": {
-    "es6-promise": "^4.2.8",
+    "@types/classnames": "^2.2.10",
+    "es6-promise": "4.2.8",
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -37,23 +38,30 @@
     "@storybook/react": "~6.0.21",
     "@types/enzyme": "~3.10.6",
     "@types/jest": "~26.0.14",
-    "@types/node": "14.10.3",
-    "@types/react": "16.9.49",
-    "@types/react-dom": "^16.9.8",
+    "@types/node": "~14.10.3",
+    "@types/react": "~16.9.49",
+    "@types/react-dom": "~16.9.8",
+    "@typescript-eslint/eslint-plugin": "~4.0.1",
+    "@typescript-eslint/parser": "~4.0.1",
     "awesome-typescript-loader": "~5.2.1",
+    "babel-eslint": "~10.1.0",
     "babel-jest": "~26.3.0",
     "babel-loader": "~8.1.0",
     "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
-    "classnames": "^2.2.6",
+    "classnames": "~2.2.6",
     "enzyme": "~3.11.0",
     "enzyme-adapter-react-16": "~1.15.4",
     "eslint": "~7.9.0",
-    "eslint-config-prettier": "~6.11.0",
-    "eslint-plugin-jsx-a11y": "~6.3.1",
-    "eslint-plugin-prettier": "~3.1.4",
-    "eslint-plugin-react": "~7.20.6",
+    "eslint-config-standard": "~14.1.1",
+    "eslint-config-standard-jsx": "~8.1.0",
+    "eslint-plugin-import": "~2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-node": "~11.1.0",
+    "eslint-plugin-promise": "~4.2.1",
+    "eslint-plugin-react": "~7.21.3",
     "eslint-plugin-react-hooks": "~4.1.2",
-    "fetch-jsonp": "^1.1.3",
+    "eslint-plugin-standard": "^4.0.1",
+    "fetch-jsonp": "~1.1.3",
     "husky": "~4.3.0",
     "jest": "~26.4.2",
     "lint-staged": "~10.3.0",
@@ -67,9 +75,13 @@
     }
   },
   "lint-staged": {
-    "./src/*.{js,jsx,ts,tsx}": [
-      "npx prettier --write",
-      "eslint src/*.js --fix-dry-run"
+    "*.{js,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix --quiet",
+      "git add"
+    ],
+    "*.css": [
+      "stylelint"
     ]
   }
 }
