--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "noImplicitAny": true,
-    "allowSyntheticDefaultImports": true
+    "jsx": "preserve"
   },
   "include": [
     "next-env.d.ts",
