fix prettier interface, fix babel.config.json

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,13 +1,9 @@
 {
+  "parser": "typescript",
   "useTabs": false,
   "tabWidth": 2,
   "singleQuote": true,
-  "overrides": [
-    {
-      "files": [".prettierrc", ".eslintrc"],
-      "options": { "parser": "json" }
-    }
-  ],
-  "trailingComma": "es5",
+  "jsxSingleQuote": true,
+  "printWidth": 100,
   "semi": false
 }
