--- a/babel.config.json
+++ b/babel.config.json
@@ -1,21 +1,8 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-flow"],
-  "plugins": [
-    "@babel/plugin-transform-runtime",
-    "@babel/plugin-syntax-dynamic-import",
-    "@babel/plugin-transform-modules-commonjs",
-    "@babel/plugin-proposal-class-properties"
-  ],
+  "presets": ["next/babel"],
   "env": {
-    "development": {
-      "plugins": ["transform-es2015-modules-commonjs"]
-    },
     "test": {
-      "plugins": [
-        "transform-es2015-modules-commonjs",
-        "@babel/plugin-proposal-class-properties"
-      ],
-      "presets": ["@babel/preset-react"]
+      "presets": ["next/babel"]
     }
   }
 }
