--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "~7.11.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/plugin-transform-runtime": "~7.11.5",
     "@babel/preset-flow": "~7.10.4",
     "@storybook/addon-docs": "^6.0.21",
@@ -47,7 +48,6 @@
     "babel-eslint": "~10.1.0",
     "babel-jest": "~26.3.0",
     "babel-loader": "~8.1.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "~6.26.2",
     "classnames": "~2.2.6",
     "enzyme": "~3.11.0",
     "enzyme-adapter-react-16": "~1.15.4",
