--- a/package.json
+++ b/package.json
@@ -77,11 +77,7 @@
   "lint-staged": {
     "*.{js,ts,tsx}": [
       "prettier --write",
-      "eslint --fix --quiet",
-      "git add"
-    ],
-    "*.css": [
-      "stylelint"
+      "eslint --fix --quiet"
     ]
   }
 }
