--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "storybook": "start-storybook -s ./public",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint:style": "stylelint \"{components, styles}/**/*.css\""
   },
   "keywords": [
     "search",
@@ -67,6 +68,8 @@
     "lint-staged": "~10.3.0",
     "prettier": "~2.1.1",
     "react-docgen-typescript-loader": "~3.7.2",
+    "stylelint": "^13.7.2",
+    "stylelint-config-standard": "^20.0.0",
     "ts-jest": "~26.3.0"
   },
   "husky": {
@@ -78,6 +81,9 @@
     "*.{js,ts,tsx}": [
       "prettier --write",
       "eslint --fix --quiet"
+    ],
+    "*.css": [
+      "stylelint"
     ]
   }
 }
