add export scripts

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next build && next export",
     "storybook": "start-storybook -s ./public",
     "test": "jest",
     "test:watch": "jest --watch",
