--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "fetch-jsonp": "~1.1.3",
     "husky": "~4.3.0",
     "jest": "~26.4.2",
+    "js-cookie": "^2.2.1",
     "lint-staged": "~10.3.0",
     "prettier": "~2.1.1",
     "react-docgen-typescript-loader": "~3.7.2",
