--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "author": "ElliotForWater",
   "license": "ISC",
   "dependencies": {
-    "@types/classnames": "^2.2.10",
+    "@types/classnames": "2.2.10",
     "es6-promise": "4.2.8",
     "next": "9.5.3",
     "react": "16.13.1",
@@ -34,10 +34,10 @@
   },
   "devDependencies": {
     "@babel/core": "~7.11.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/plugin-transform-modules-commonjs": "~7.10.4",
     "@babel/plugin-transform-runtime": "~7.11.5",
     "@babel/preset-flow": "~7.10.4",
-    "@storybook/addon-docs": "^6.0.21",
+    "@storybook/addon-docs": "~6.0.21",
     "@storybook/react": "~6.0.21",
     "@types/enzyme": "~3.10.6",
     "@types/jest": "~26.0.14",
@@ -46,6 +46,7 @@
     "@types/react-dom": "~16.9.8",
     "@typescript-eslint/eslint-plugin": "~4.0.1",
     "@typescript-eslint/parser": "~4.0.1",
+    "autoprefixer": "^9.8.6",
     "awesome-typescript-loader": "~5.2.1",
     "babel-eslint": "~10.1.0",
     "babel-jest": "~26.3.0",
@@ -57,21 +58,27 @@
     "eslint-config-standard": "~14.1.1",
     "eslint-config-standard-jsx": "~8.1.0",
     "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jest": "~24.1.0",
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-react": "~7.21.3",
     "eslint-plugin-react-hooks": "~4.1.2",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-standard": "~4.0.1",
     "fetch-jsonp": "~1.1.3",
     "husky": "~4.3.0",
     "jest": "~26.4.2",
-    "js-cookie": "^2.2.1",
+    "js-cookie": "~2.2.1",
     "lint-staged": "~10.3.0",
+    "next-ga": "~2.3.4",
+    "postcss": "^8.1.1",
+    "postcss-extend": "^1.0.5",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-loader": "^4.0.2",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "~2.1.1",
     "react-docgen-typescript-loader": "~3.7.2",
-    "stylelint": "^13.7.2",
-    "stylelint-config-standard": "^20.0.0",
+    "stylelint": "~13.7.2",
+    "stylelint-config-standard": "~20.0.0",
     "ts-jest": "~26.3.0"
   },
   "husky": {
