--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "repository": "https://bitbucket.org/elliotforwater/elliotforwater_v4/src/master/",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "next-translate && next dev",
+    "build": "next-translate && next build",
+    "start": "next-translate && next start",
     "export": "next build && next export",
     "storybook": "start-storybook -s ./public",
     "test": "jest",
@@ -27,9 +27,10 @@
   "dependencies": {
     "@types/classnames": "2.2.10",
     "es6-promise": "4.2.8",
-    "next": "9.5.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "next": "^10.0.1",
+    "next-translate": "^0.19.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "typescript": "4.0.2"
   },
   "devDependencies": {
