--- a/babel.config.json
+++ b/babel.config.json
@@ -1,8 +1,22 @@
 {
-  "presets": ["next/babel"],
   "env": {
-    "test": {
+    "development": {
       "presets": ["next/babel"]
+    },
+    "production": {
+      "presets": ["next/babel"]
+    },
+    "test": {
+      "presets": [
+        [
+          "next/babel",
+          {
+            "preset-env": {
+              "modules": "commonjs"
+            }
+          }
+        ]
+      ]
     }
   }
 }
