--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "next": "^10.0.1",
     "next-translate": "^0.19.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "typescript": "4.0.2"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.11.6",
@@ -47,6 +46,7 @@
     "@types/react-dom": "~16.9.8",
     "@typescript-eslint/eslint-plugin": "~4.0.1",
     "@typescript-eslint/parser": "~4.0.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
     "autoprefixer": "^9.8.6",
     "awesome-typescript-loader": "~5.2.1",
     "babel-eslint": "~10.1.0",
@@ -80,7 +80,7 @@
     "react-docgen-typescript-loader": "~3.7.2",
     "stylelint": "~13.7.2",
     "stylelint-config-standard": "~20.0.0",
-    "ts-jest": "~26.3.0"
+    "typescript": "4.0.2"
   },
   "husky": {
     "hooks": {
