--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "esnext",
     "lib": [
       "dom",
-      "dom.iterable",
-      "esnext"
+      "es2017"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -15,15 +14,27 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
+    "removeComments": true,
     "isolatedModules": true,
     "jsx": "preserve"
   },
+  "typeRoots": [
+    "./node_modules/@types",
+    "./types"
+  ],
+  "exclude": [
+    "dist",
+    ".next",
+    "node_modules",
+    "next.config.js",
+    "postcss.config.js",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "coverage"
+  ],
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules"
   ]
 }
