--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
     "next": "^10.0.1",
     "next-translate": "^0.19.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "storybook": "^6.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.11.6",
     "@babel/plugin-transform-modules-commonjs": "~7.10.4",
     "@babel/plugin-transform-runtime": "~7.11.5",
     "@babel/preset-flow": "~7.10.4",
-    "@storybook/addon-docs": "~6.0.21",
-    "@storybook/react": "~6.0.21",
+    "@storybook/addon-docs": "^6.1.1",
+    "@storybook/react": "^6.1.1",
     "@types/enzyme": "~3.10.6",
     "@types/jest": "~26.0.14",
     "@types/node": "~14.10.3",
@@ -80,6 +81,7 @@
     "react-docgen-typescript-loader": "~3.7.2",
     "stylelint": "~13.7.2",
     "stylelint-config-standard": "~20.0.0",
+    "ts-jest": "^26.4.4",
     "typescript": "4.0.2"
   },
   "husky": {
