--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": [
+    "stylelint-config-standard",
+    "./node_modules/prettier-stylelint/config.js"
+  ],
+  "rules": {
+    "at-rule-no-unknown": [true, {"ignoreAtRules": ["extend"]} ]
+  }
 }
