--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "postcss-loader": "^4.0.2",
     "postcss-preset-env": "^6.7.0",
     "prettier": "~2.1.1",
+    "prettier-stylelint": "^0.4.2",
     "react-docgen-typescript-loader": "~3.7.2",
     "stylelint": "~13.7.2",
     "stylelint-config-standard": "~20.0.0",
