Add to browser btn
* start to make search counter a react component

* usercontext set up

* show/hide add to btn, searches count with cookies, fix getInitialProps warning

* change Postcss extend plugin, previous plugin was old and with false warning

* delete SearchCount component and web component

* fix storybook

* fix all tests

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "^10.0.1",
     "next-translate": "^0.19.4",
     "react": "^17.0.1",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "storybook": "^6.1.1"
@@ -39,6 +40,7 @@
     "@babel/plugin-transform-modules-commonjs": "~7.10.4",
     "@babel/plugin-transform-runtime": "~7.11.5",
     "@babel/preset-flow": "~7.10.4",
+    "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-docs": "^6.1.1",
     "@storybook/react": "^6.1.1",
     "@testing-library/react": "^11.2.2",
@@ -74,13 +76,14 @@
     "lint-staged": "~10.3.0",
     "next-ga": "~2.3.4",
     "postcss": "^8.1.1",
-    "postcss-extend": "^1.0.5",
+    "postcss-extend-rule": "^3.0.0",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-loader": "^4.0.2",
     "postcss-preset-env": "^6.7.0",
     "prettier": "~2.1.1",
     "prettier-stylelint": "^0.4.2",
     "react-docgen-typescript-loader": "~3.7.2",
+    "storybook-addon-next-router": "^2.0.3",
     "stylelint": "~13.7.2",
     "stylelint-config-standard": "~20.0.0",
     "ts-jest": "^26.4.4",
