--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL=https://elliotforwaterapi.azurewebsites.net/api
+NEXT_PUBLIC_BASE_URL=https://elliotforwater.com
+NEXT_PUBLIC_API_URL=https://elliotforwater.com/api
