--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,7 @@
 {
-  "useTabs": false,
-  "tabWidth": 2,
   "singleQuote": true,
   "jsxSingleQuote": true,
   "printWidth": 300,
   "semi": false,
-  "trailingComma": "all"
+  "endOfLine": "auto"
 }
