--- a/package.json
+++ b/package.json
@@ -61,12 +61,14 @@
     "classnames": "~2.2.6",
     "enzyme": "~3.11.0",
     "enzyme-adapter-react-16": "~1.15.4",
-    "eslint": "~7.9.0",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-config-standard": "~14.1.1",
     "eslint-config-standard-jsx": "~8.1.0",
     "eslint-plugin-import": "~2.22.1",
     "eslint-plugin-jest": "~24.1.0",
     "eslint-plugin-node": "~11.1.0",
+    "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-react": "~7.21.3",
     "eslint-plugin-react-hooks": "~4.1.2",
@@ -84,6 +86,7 @@
     "prettier": "~2.1.1",
     "prettier-stylelint": "^0.4.2",
     "react-docgen-typescript-loader": "~3.7.2",
+    "react-hook-form": "^6.14.0",
     "react-odometerjs": "^2.1.1",
     "storybook-addon-next-router": "^2.0.3",
     "stylelint": "~13.7.2",
