--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://bitbucket.org/elliotforwater/elliotforwater_v4/src/master/",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_TLS_REJECT_UNAUTHORIZED='0' env-cmd -f .env.development next dev",
+    "dev": "env-cmd -f .env.development next dev",
     "build:dev": " env-cmd -f .env.development next build",
     "start": "env-cmd -f .env.production next start",
     "build:prod": "env-cmd -f .env.production next build",
