--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ steps:
       verbose: false
 
   - task: Npm@1
-    displayName: 'npm run build:stage'
+    displayName: 'npm run build:prod'
     env:
       NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN: $(NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN)
       NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL: $(NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL)
@@ -18,7 +18,7 @@ steps:
     inputs:
       command: custom
       verbose: false
-      customCommand: 'run build:stage'
+      customCommand: 'run build:prod'
 
   - task: Npm@1
     displayName: 'npm run export'
