fix build and start scripts for deployment

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "env-cmd -f .env.development next dev",
-    "build:dev": " env-cmd -f .env.development next build",
-    "start": "env-cmd -f .env.production next start",
-    "build:prod": "env-cmd -f .env.production next build",
-    "start:stage": "env-cmd -f .env.staging next build && next start",
+    "build:dev": "env-cmd -f .env.development next build",
     "build:stage": "env-cmd -f .env.staging next build",
+    "build:prod": "env-cmd -f .env.production next build",
+    "start:stage": "env-cmd -f .env.staging next start",
+    "start": "env-cmd -f .env.production next start",
     "storybook": "start-storybook -s ./public",
     "test": "jest",
     "test:watch": "jest --watch",
