--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@types/chrome": "~0.0.127",
     "@types/classnames": "~2.2.10",
     "@types/enzyme": "~3.10.6",
-    "@types/gtag.js": "^0.0.4",
+    "@types/gtag.js": "~0.0.4",
     "@types/jest": "~26.0.14",
     "@types/node": "~14.10.3",
     "@types/react": "~16.9.49",
