--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "author": "ElliotForWater",
   "license": "ISC",
   "dependencies": {
-    "next": "^10.0.1",
+    "next": "^10.0.9",
     "next-translate": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
@@ -65,7 +65,6 @@
     "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
     "enzyme": "~3.11.0",
-    "enzyme-adapter-react-16": "~1.15.4",
     "eslint": "~7.9.0",
     "eslint-config-prettier": "~7.0.0",
     "eslint-config-standard": "~14.1.1",
@@ -79,6 +78,7 @@
     "eslint-plugin-react-hooks": "~4.1.2",
     "eslint-plugin-standard": "~4.0.1",
     "fetch-jsonp": "~1.1.3",
+    "hoist-non-react-statics": "^3.3.2",
     "husky": "~4.3.0",
     "jest": "~26.4.2",
     "js-cookie": "~2.2.1",
