--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "author": "ElliotForWater",
   "license": "ISC",
   "dependencies": {
-    "next": "^10.0.1",
+    "next": "^10.0.9",
     "next-translate": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
@@ -78,6 +78,7 @@
     "eslint-plugin-react-hooks": "~4.1.2",
     "eslint-plugin-standard": "~4.0.1",
     "fetch-jsonp": "~1.1.3",
+    "hoist-non-react-statics": "^3.3.2",
     "husky": "~4.3.0",
     "jest": "~26.4.2",
     "js-cookie": "~2.2.1",
