--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/plugin-transform-modules-commonjs": "~7.10.4",
     "@babel/plugin-transform-runtime": "~7.11.5",
     "@babel/preset-flow": "~7.10.4",
+    "@contentful/rich-text-html-renderer": "^14.1.2",
     "@next/bundle-analyzer": "^10.0.7",
     "@storybook/addon-actions": "~6.1.11",
     "@storybook/addon-docs": "~6.1.1",
