--- a/.env.development.example
+++ b/.env.development.example
@@ -9,5 +9,6 @@ NEXT_PUBLIC_API_URL=https://localhost:5001/api
 # Resolve nodejs certificate error on local
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
+NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL=
 NEXT_PUBLIC_CONTENTFUL_SPACE_ID=
 NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN=
