--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,10 @@ steps:
 
   - task: Npm@1
     displayName: 'npm run build:stage'
+    env:
+      NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN: $(NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN)
+      NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL: $(NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL)
+      NEXT_PUBLIC_CONTENTFUL_SPACE_ID: $(NEXT_PUBLIC_CONTENTFUL_SPACE_ID)
     inputs:
       command: custom
       verbose: false
