--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/plugin-transform-modules-commonjs": "~7.10.4",
     "@babel/plugin-transform-runtime": "~7.11.5",
     "@babel/preset-flow": "~7.10.4",
+    "@contentful/rich-text-html-renderer": "^14.1.2",
     "@next/bundle-analyzer": "^10.0.7",
     "@storybook/addon-actions": "~6.1.11",
     "@storybook/addon-docs": "~6.1.1",
@@ -63,6 +64,7 @@
     "babel-loader": "~8.1.0",
     "classnames": "~2.2.6",
     "cross-env": "^7.0.3",
+    "css-loader": "^5.2.1",
     "env-cmd": "^10.1.0",
     "enzyme": "~3.11.0",
     "eslint": "~7.9.0",
@@ -98,8 +100,11 @@
     "react-hook-form": "~6.14.0",
     "react-icons": "~4.1.0",
     "react-odometerjs": "~2.1.1",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "storybook": "~6.1.1",
     "storybook-addon-next-router": "~2.0.3",
+    "style-loader": "^2.0.0",
     "stylelint": "~13.7.2",
     "stylelint-config-standard": "~20.0.0",
     "ts-jest": "~26.4.4",
