--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/plugin-transform-runtime": "~7.11.5",
     "@babel/preset-flow": "~7.10.4",
     "@contentful/rich-text-html-renderer": "^14.1.2",
+    "@contentful/rich-text-react-renderer": "^14.1.3",
     "@next/bundle-analyzer": "^10.0.7",
     "@storybook/addon-actions": "~6.1.11",
     "@storybook/addon-docs": "~6.1.1",
@@ -99,6 +100,7 @@
     "react-device-detect": "~1.14.0",
     "react-hook-form": "~6.14.0",
     "react-icons": "~4.1.0",
+    "react-markdown": "^6.0.1",
     "react-odometerjs": "~2.1.1",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
