fix slides arrows css order, image height, hero opacity

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -12,6 +12,14 @@
         ]
       }
     ],
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": [
+          "global"
+        ]
+      }
+    ]
   }
 }
