--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/preset-flow": "~7.10.4",
     "@contentful/rich-text-html-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.3",
+    "@contentful/rich-text-types": "^14.1.2",
     "@next/bundle-analyzer": "^10.0.7",
     "@storybook/addon-actions": "~6.1.11",
     "@storybook/addon-docs": "~6.1.1",
