--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "react-device-detect": "~1.14.0",
     "react-hook-form": "~6.14.0",
     "react-icons": "~4.1.0",
+    "react-lottie": "^1.2.3",
     "react-markdown": "^6.0.1",
     "react-odometerjs": "~2.1.1",
     "react-slick": "^0.28.1",
