--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "ElliotForWater",
   "license": "ISC",
   "dependencies": {
+    "contentful-mock": "0.0.4",
     "next": "^10.0.9",
     "next-translate": "^1.0.1",
     "react": "^17.0.1",
