add mock contentful env var

--- a/.env.development.example
+++ b/.env.development.example
@@ -12,3 +12,5 @@ NODE_TLS_REJECT_UNAUTHORIZED=0
 NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL=
 NEXT_PUBLIC_CONTENTFUL_SPACE_ID=
 NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN=
+
+MOCK_CONTENTFUL=TRUE
