--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "next": "^10.0.9",
     "next-translate": "^1.0.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "request-ip": "^2.1.3"
   },
   "devDependencies": {
     "@babel/core": "~7.11.6",
