Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ steps:
       NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL: $(NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL)
       NEXT_PUBLIC_CONTENTFUL_SPACE_ID: $(NEXT_PUBLIC_CONTENTFUL_SPACE_ID)
       BING_SEARCH_KEY: $(BING_SEARCH_KEY)
+      NEXT_PUBLIC_BASE_URL: $(NEXT_PUBLIC_BASE_URL)
     inputs:
       command: custom
       verbose: false
