fix env variables

--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_BASE_URL=https://elliotforwaterstage.azurewebsites.net
-NEXT_PUBLIC_API_URL=https://apistaging.elliotforwater.com/api
+NEXT_PUBLIC_BASE_URL=https://staging.elliotforwater.com
