--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@types/classnames": "~2.2.10",
     "@types/enzyme": "~3.10.6",
     "@types/gtag.js": "~0.0.4",
-    "@types/jest": "~26.0.14",
+    "@types/jest": "^26.0.24",
     "@types/node": "~14.10.3",
     "@types/react": "~16.9.49",
     "@types/react-dom": "~16.9.8",
@@ -64,7 +64,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "~0.3.1",
     "autoprefixer": "~9.8.6",
     "babel-eslint": "~10.1.0",
-    "babel-jest": "~26.3.0",
+    "babel-jest": "^27.0.6",
     "babel-loader": "~8.1.0",
     "classnames": "~2.2.6",
     "cross-env": "^7.0.3",
@@ -86,7 +86,7 @@
     "fetch-jsonp": "~1.1.3",
     "hoist-non-react-statics": "^3.3.2",
     "husky": "~4.3.0",
-    "jest": "~26.4.2",
+    "jest": "^27.0.6",
     "js-cookie": "~2.2.1",
     "json-server": "^0.16.3",
     "lint-staged": "~10.3.0",
@@ -112,7 +112,7 @@
     "style-loader": "^2.0.0",
     "stylelint": "~13.7.2",
     "stylelint-config-standard": "~20.0.0",
-    "ts-jest": "~26.4.4",
+    "ts-jest": "^27.0.3",
     "typescript": "~4.0.2"
   },
   "husky": {
