--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "eslint-plugin-react": "~7.21.3",
     "eslint-plugin-react-hooks": "~4.1.2",
     "eslint-plugin-standard": "~4.0.1",
+    "express-rate-limit": "^5.5.1",
     "fetch-jsonp": "~1.1.3",
     "hoist-non-react-statics": "^3.3.2",
     "husky": "~4.3.0",
@@ -90,6 +91,7 @@
     "js-cookie": "~2.2.1",
     "json-server": "^0.16.3",
     "lint-staged": "~10.3.0",
+    "lru-cache": "^6.0.0",
     "next-compose-plugins": "^2.2.1",
     "nprogress": "^0.2.0",
     "postcss": "~8.2.10",
