Feat: Api rate limit (#149)

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "js-cookie": "~2.2.1",
     "json-server": "^0.16.3",
     "lint-staged": "~10.3.0",
+    "lru-cache": "^6.0.0",
     "next-compose-plugins": "^2.2.1",
     "nprogress": "^0.2.0",
     "postcss": "~8.2.10",
