remove ita, es, give 20 req per minute

--- a/.env.development.example
+++ b/.env.development.example
@@ -2,6 +2,7 @@
 
 # Frontend Url 
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_BLOG_URL=http://localhost:4000
 
 # Resolve nodejs certificate error on local
 NODE_TLS_REJECT_UNAUTHORIZED=0
