--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_BASE_URL=https://elliotforwater.com
 NEXT_PUBLIC_API_URL=https://api.elliotforwater.com/api
+NEXT_PUBLIC_BLOG_URL=https://elliotforwaterblogstaging.azurewebsites.net
 NEXT_PUBLIC_IS_PRODUCTION=TRUE
