--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_URL=https://api.elliotforwater.com/api
 NEXT_PUBLIC_BASE_URL=https://staging.elliotforwater.com
+NEXT_PUBLIC_BLOG_URL=https://elliotforwaterblogstaging.azurewebsites.net
