--- a/package.json
+++ b/package.json
@@ -31,90 +31,90 @@
   "author": "ElliotForWater",
   "license": "ISC",
   "dependencies": {
-    "contentful-mock": "0.0.4",
-    "next": "^11.1.0",
-    "next-translate": "^1.0.1",
+    "contentful-mock": "^0.0.4",
+    "next": "^11.1.3",
+    "next-translate": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "request-ip": "^2.1.3"
   },
   "devDependencies": {
-    "@babel/core": "~7.11.6",
-    "@babel/plugin-transform-modules-commonjs": "~7.10.4",
-    "@babel/plugin-transform-runtime": "~7.11.5",
-    "@babel/preset-flow": "~7.10.4",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-flow": "^7.10.4",
     "@contentful/rich-text-html-renderer": "^14.1.2",
     "@contentful/rich-text-react-renderer": "^14.1.3",
     "@contentful/rich-text-types": "^14.1.2",
-    "@next/bundle-analyzer": "^10.0.7",
-    "@storybook/addon-actions": "~6.1.11",
-    "@storybook/addon-docs": "~6.1.1",
-    "@storybook/react": "~6.1.1",
-    "@testing-library/react": "~11.2.2",
-    "@types/chrome": "~0.0.127",
-    "@types/classnames": "~2.2.10",
-    "@types/enzyme": "~3.10.6",
-    "@types/gtag.js": "~0.0.4",
+    "@next/bundle-analyzer": "10.0.7",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-docs": "^6.1.1",
+    "@storybook/react": "^6.1.1",
+    "@testing-library/react": "^11.2.2",
+    "@types/chrome": "^0.0.127",
+    "@types/classnames": "^2.2.10",
+    "@types/enzyme": "^3.10.6",
+    "@types/gtag.js": "^0.0.4",
     "@types/jest": "^26.0.24",
-    "@types/node": "~14.10.3",
-    "@types/react": "~16.9.49",
-    "@types/react-dom": "~16.9.8",
-    "@typescript-eslint/eslint-plugin": "~4.0.1",
-    "@typescript-eslint/parser": "~4.0.1",
-    "@wojtekmaj/enzyme-adapter-react-17": "~0.3.1",
-    "autoprefixer": "~9.8.6",
-    "babel-eslint": "~10.1.0",
+    "@types/node": "^14.10.3",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
+    "autoprefixer": "^9.8.6",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
-    "babel-loader": "~8.1.0",
-    "classnames": "~2.2.6",
+    "babel-loader": "^8.1.0",
+    "classnames": "^2.2.6",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.1",
     "env-cmd": "^10.1.0",
-    "enzyme": "~3.11.0",
-    "eslint": "~7.9.0",
-    "eslint-config-prettier": "~7.0.0",
-    "eslint-config-standard": "~14.1.1",
-    "eslint-config-standard-jsx": "~8.1.0",
-    "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-jest": "~24.1.0",
-    "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-prettier": "~3.2.0",
-    "eslint-plugin-promise": "~4.2.1",
-    "eslint-plugin-react": "~7.21.3",
-    "eslint-plugin-react-hooks": "~4.1.2",
-    "eslint-plugin-standard": "~4.0.1",
-    "fetch-jsonp": "~1.1.3",
+    "enzyme": "^3.11.0",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-jsx": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-standard": "^4.0.1",
+    "fetch-jsonp": "^1.1.3",
     "hoist-non-react-statics": "^3.3.2",
-    "husky": "~4.3.0",
+    "husky": "^4.3.0",
     "jest": "^27.0.6",
-    "js-cookie": "~2.2.1",
+    "js-cookie": "^2.2.1",
     "json-server": "^0.16.3",
-    "lint-staged": "~10.3.0",
+    "lint-staged": "^10.3.0",
     "lru-cache": "^6.0.0",
     "next-compose-plugins": "^2.2.1",
     "nprogress": "^0.2.0",
-    "postcss": "~8.2.10",
-    "postcss-extend-rule": "~3.0.0",
-    "postcss-flexbugs-fixes": "~4.2.1",
-    "postcss-loader": "~4.0.2",
-    "postcss-preset-env": "~6.7.0",
-    "prettier": "~2.1.1",
-    "prettier-stylelint": "~0.4.2",
-    "react-device-detect": "~1.14.0",
+    "postcss": "^8.2.10",
+    "postcss-extend-rule": "^3.0.0",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-loader": "^4.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.1.1",
+    "prettier-stylelint": "^0.4.2",
+    "react-device-detect": "^1.14.0",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "~6.14.0",
-    "react-icons": "~4.1.0",
+    "react-hook-form": "^6.14.0",
+    "react-icons": "^4.1.0",
     "react-markdown": "^6.0.1",
-    "react-odometerjs": "~2.1.1",
+    "react-odometerjs": "^2.1.1",
     "react-slick": "^0.28.1",
     "slick-carousel": "^1.8.1",
-    "storybook": "~6.1.1",
-    "storybook-addon-next-router": "~2.0.3",
+    "storybook": "^6.1.1",
+    "storybook-addon-next-router": "^3.1.0",
     "style-loader": "^2.0.0",
-    "stylelint": "~13.7.2",
-    "stylelint-config-standard": "~20.0.0",
+    "stylelint": "^13.7.2",
+    "stylelint-config-standard": "^20.0.0",
     "ts-jest": "^27.0.3",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.2"
   },
   "husky": {
     "hooks": {
