update blog env var

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_BASE_URL=https://elliotforwater.com
 NEXT_PUBLIC_API_URL=https://api.elliotforwater.com/api
-NEXT_PUBLIC_BLOG_URL=https://elliotforwaterblogstaging.azurewebsites.net
+NEXT_PUBLIC_BLOG_URL=http://blog.elliotforwater.com/blog
 NEXT_PUBLIC_IS_PRODUCTION=TRUE
