--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-translate": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "request-ip": "^2.1.3"
   },
   "devDependencies": {
