--- a/.env.development.example
+++ b/.env.development.example
@@ -10,5 +10,6 @@ NODE_TLS_REJECT_UNAUTHORIZED=0
 NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL=
 NEXT_PUBLIC_CONTENTFUL_SPACE_ID=
 NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN=
+RECAPTCHA_SITE_KEY=
 
 MOCK_CONTENTFUL=TRUE
