--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "ElliotForWater",
   "license": "ISC",
   "dependencies": {
+    "accessible-nprogress": "^1.0.0",
     "contentful-mock": "^0.0.4",
     "next": "^11.1.3",
     "next-translate": "^1.2.0",
