--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "author": "ElliotForWater",
   "license": "ISC",
   "dependencies": {
+    "accessible-nprogress": "^1.0.0",
     "contentful-mock": "^0.0.4",
     "next": "^11.1.3",
     "next-translate": "^1.2.0",
@@ -92,7 +93,6 @@
     "lint-staged": "^10.3.0",
     "lru-cache": "^6.0.0",
     "next-compose-plugins": "^2.2.1",
-    "nprogress": "^0.2.0",
     "postcss": "^8.2.10",
     "postcss-extend-rule": "^3.0.0",
     "postcss-flexbugs-fixes": "^4.2.1",
