--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "next-translate": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-google-recaptcha": "^2.1.0",
     "request-ip": "^2.1.3"
   },
   "devDependencies": {
@@ -102,6 +101,7 @@
     "prettier": "^2.1.1",
     "prettier-stylelint": "^0.4.2",
     "react-device-detect": "^1.14.0",
+    "react-google-recaptcha-v3": "^1.9.7",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.14.0",
     "react-icons": "^4.1.0",
