--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "prettier": "^2.1.1",
     "prettier-stylelint": "^0.4.2",
     "react-device-detect": "^1.14.0",
+    "react-google-recaptcha-v3": "^1.9.7",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.14.0",
     "react-icons": "^4.1.0",
