--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ steps:
       NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN: $(NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN)
       NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL: $(NEXT_PUBLIC_CONTENTFUL_GRAPHQL_URL)
       NEXT_PUBLIC_CONTENTFUL_SPACE_ID: $(NEXT_PUBLIC_CONTENTFUL_SPACE_ID)
+      NEXT_PUBLIC_RECAPTCHA_SITE_KEY: $(NEXT_PUBLIC_RECAPTCHA_SITE_KEY)
       BING_SEARCH_KEY: $(BING_SEARCH_DEV_KEY)
     inputs:
       command: custom
