add nofollow staging env

--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,5 @@
 NEXT_PUBLIC_API_URL=https://api.elliotforwater.com/api
 NEXT_PUBLIC_BASE_URL=https://staging.elliotforwater.com
 NEXT_PUBLIC_BLOG_URL=https://elliotforwaterblogstaging.azurewebsites.net/blog
+
+NEXT_PUBLIC_IS_STAGING=TRUE
